--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "framer-motion": "^11.3.31",
     "next": "14.2.7",
     "react": "^18",
@@ -20,8 +21,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
+    "eslint-plugin-react": "^7.35.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
